Gestion du type par le content-type et paramètres en booleén
